2005-06-11  Christian Persch  <chpe@cvs.gnome.org>

	* modulesets/gnome-2.12.modules: Revert to 0.45 until I can figure
	out why 0.46 doesn't work.

2005-06-10  Christian Persch  <chpe@cvs.gnome.org>

	* modulesets/gnome-2.12.modules: Update to iso-codes 0.46.

2005-06-10  Jeroen Zwartepoorte  <jeroen.zwartepoorte@gmail.com>

	* modulesets/freedesktop.modules: Add glitz. Nothing depends on it. If
	you want cairo to use glitz, first build glitz and *then* cairo.

2005-06-10  Jeroen Zwartepoorte  <jeroen.zwartepoorte@gmail.com>

	* modulesets/gnome-2.12.modules: Make totem depend on iso-codes.

2005-06-10  James Henstridge  <james@jamesh.id.au>

	* doc/jhbuild.xml (moduleset): add a note that the moduleset
	parameter can be a list of strings as well as just a string.

	* modulesets/bootstrap.modules (libtool): switch to a newer
	version of the RH multilib patch.  Fixes bug #307067.

	* modulesets/gnome-2.10.modules (gnome-icon-theme): use gnome-2-10
	branch.

2005-06-09  Luis Villa <luis.villa@gmail.com>

	* modulesets/gnome-2.12.modules (ggv, gpdf, evince): changing this
	to reflect current consensus about 2.12. Also, removed a duplicate
	entry for totem, because I can.
	
2005-06-09  James Henstridge  <james@jamesh.id.au>

	* modulesets/gnome-2.10.modules (libgtop): use gnome-2-10 branch.
	(ggv): use gnome-2-10 branch.

	* modulesets/bootstrap.modules (libtool): update to 1.5.18.
	(gettext): update to 0.14.5.

	* jhbuild/modtypes/tarball.py (Tarball.get_localfile): check if
	basename is None.  If so, raise FatalError.  This is to catch some
	errors in moduleset files.  Fixes bug #173018.

	* modulesets/gnome-2.12.modules (gthumb): add gthumb.  Patch from
	Jaap A. Haitsma <jaap@haitsma.org> (fixes bug #305860).
	(fast-user-switch-applet): add module.  Patch from Jaap A. Haitsma
	<jaap@haitsma.org> (fixes bug #306538).
	(gnome-power): add module.  Patch from Jaap A. Haitsma
	<jaap@haitsma.org> (fixes bug #306539).

2005-04-29  Martin Ejdestig  <mejde@dtek.chalmers.se>