@@ -1,3 +1,9 @@
+2005-06-12  Marco Pesenti Gritti  <mpg@redhat.com>
+
+	* jhbuild/modtypes/mozillamodule.py:
+
+	Fix installation path guessing for firefox
+
 2005-06-11  Christian Persch  <chpe@cvs.gnome.org>
 
 	* modulesets/gnome-2.12.modules: Revert to 0.45 until I can figure
